--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,48 +1,36 @@
-<br/>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3 col-xs-12">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-xs-12">
-            <h2>Cambiar de contraseña</h2>
+<%= render layout: 'devise/shared/devise_panel', locals: {title: 'Cambiar de contraseña'} do %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :put}) do |f| %>
+        <%= devise_error_messages! %>
+
+        <%= f.hidden_field :reset_password_token %>
+        <div class="form-horizontal">
+          <div class="form-group">
+            <div class="col-xs-12">
+              <% caracteres_minimos_placeholder = 'Contraseña' %>
+              <% if @minimum_password_length %>
+                  <% caracteres_minimos_placeholder += ": #{@minimum_password_length} caracteres mínimos" %>
+              <% end %>
+              <%= f.password_field :password, autofocus: true, autocomplete: 'off', placeholder: caracteres_minimos_placeholder, class: 'form-control' %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-xs-12">
+              <%= f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'Confirmación contraseña', class: 'form-control' %>
+            </div>
+          </div>
+
+          <div class="row">
             <hr/>
           </div>
-        </div>
-        <%= devise_error_messages! %>
-        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :put}) do |f| %>
-            <%= f.hidden_field :reset_password_token %>
 
-            <div class="form-horizontal">
-              <div class="form-group">
-                <div class="col-xs-12">
-                  <% caracteres_minimos_placeholder = 'Contraseña' %>
-                  <% if @minimum_password_length %>
-                      <% caracteres_minimos_placeholder += ": #{@minimum_password_length} caracteres mínimos" %>
-                  <% end %>
-                  <%= f.password_field :password, autofocus: true, autocomplete: 'off', placeholder: caracteres_minimos_placeholder, class: 'form-control' %>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <div class="col-xs-12">
-                  <%= f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'Confirmación contraseña', class: 'form-control' %>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <div class="col-xs-12">
-                  <%= f.submit 'Cambiar mi contraseña', class: 'btn btn-block btn-primary' %>
-                </div>
-              </div>
-
+          <div class="form-group">
+            <div class="col-xs-12">
+              <%= f.submit 'Cambiar mi contraseña', class: 'btn btn-block btn-primary' %>
             </div>
-        <% end %>
-        <hr/>
+          </div>
 
-      </div>
-    </div>
-    <%= render 'devise/shared/links' %>
-  </div>
-</div>
+        </div>
+    <% end %>
+<% end %>
 
