--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,35 @@
-<br/>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3 col-xs-12">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-xs-12">
-            <h2>Registrarse</h2>
+<%= render layout: 'devise/shared/devise_panel', locals: {title: 'Registrarse'} do %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="form-horizontal">
+          <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <%= f.email_field :email, autofocus: true, placeholder: 'Número de carné + @ecci.ucr.ac.cr', class: 'form-control' %>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <% caracteres_minimos_placeholder = 'Contraseña' %>
+              <% if @minimum_password_length %>
+                  <% caracteres_minimos_placeholder += ": #{@minimum_password_length} caracteres mínimos" %>
+              <% end %>
+              <%= f.password_field :password, autocomplete: 'off', placeholder: caracteres_minimos_placeholder, class: 'form-control' %>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-xs-12 col-md-10 col-md-offset-1">
+              <%= f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'Confirmación contraseña', class: 'form-control' %>
+            </div>
+          </div>
+          <div class="row">
             <hr/>
           </div>
-        </div>
-        <%= devise_error_messages! %>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <div class="form-horizontal">
-              <div class="form-group">
-                <div class="col-xs-12 col-md-10 col-md-offset-1">
-                  <%= f.email_field :email, autofocus: true, placeholder: 'Número de carné + @ecci.ucr.ac.cr', class: 'form-control' %>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-xs-12 col-md-10 col-md-offset-1">
-                  <% caracteres_minimos_placeholder = 'Contraseña' %>
-                  <% if @minimum_password_length %>
-                      <% caracteres_minimos_placeholder += ": #{@minimum_password_length} caracteres mínimos" %>
-                  <% end %>
-                  <%= f.password_field :password, autocomplete: 'off', placeholder: caracteres_minimos_placeholder, class: 'form-control' %>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-xs-12 col-md-10 col-md-offset-1">
-                  <%= f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'Confirmación contraseña', class: 'form-control' %>
-                </div>
-              </div>
-              <div class="row">
-                <hr/>
-              </div>
-              <div class="row">
-                <div class="col-xs-12">
-                  <%= f.submit 'Registrarse', class: 'btn btn-block btn-primary' %>
-                </div>
-              </div>
+          <div class="row">
+            <div class="col-xs-12">
+              <%= f.submit 'Registrarse', class: 'btn btn-block btn-primary' %>
             </div>
-        <% end %>
-      </div>
-    </div>
-    <%= render 'devise/shared/links' %>
-  </div>
-</div>
+          </div>
+        </div>
+    <% end %>
+<% end %>
 
