--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -93,11 +93,7 @@
             </div>
             <div class="row">
               <div class="col-lg-5 col-lg-offset-1 col-xs-12 col-md-10 col-md-offset-1">
-                <% ad.description.split("\n").each do |para| %>
-                    <p class="text-justify">
-                      <%= para %>
-                    </p>
-                <% end %>
+                <%= ad.description.html_safe %>
               </div>
               <div class="col-lg-5 col-lg-offset-0 col-xs-12 col-md-10 col-md-offset-1">
                 <%= image_tag ad.image_url, class: 'img-rounded img-responsive img-center' %>
