--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,8 +18,9 @@
         <li><%= link_to '¿Quiénes somos?', about_us_path, id: 'nav_quienes_somos' %></li>
         <li><%= link_to 'Anuncios', ads_path, id: 'nav_anuncios' %></li>
         <% if user_signed_in? %>
+            <li><%= link_to 'Banco de exámenes', courses_path, id:'nav_banco_examenes' %></li>
             <% if current_user.admin? %>
-                <li><%= link_to 'Administración de usuarios', users_path %></li>
+                <li><%= link_to 'Administración de usuarios', users_path, id:'nav_administracion_usuarios' %></li>
             <% end %>
             <li><%= link_to 'Cerrar sesión', destroy_user_session_path, method: :delete %></li>
         <% else %>
