--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,10 +30,13 @@ $btn-primary-bg: $orange-light;
 $btn-primary-border: $orange-light;
 $btn-primary-color: $white;
 $btn-border-radius-base: 2px;
+$btn-default-bg: $grey-dark;
+$btn-default-border: $grey-dark;
+$btn-default-color: white;
 
 // Forms
 $input-border-focus: $orange-light;
-$input-border-radius: 0px;
+$input-border-radius: 2px;
 
 // Panels
 $panel-border-radius: 2px;
@@ -116,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .form-control:focus {
-  box-shadow: 0px 0px 0px transparent;
+  box-shadow: 1px 1px 1px transparent;
   border: 2px solid $orange-light;
 }
 
@@ -138,7 +141,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .body-section {
-  background-color: $white;
+  background-color: white;
+  box-shadow: 1px 0px 3px $shadow-color;
+}
+
+.body-contact{
+  background-color: $orange-lighter;
 }
 
 .title-footer {
