--- a/app/views/layouts/_section_asocia.erb
+++ b/app/views/layouts/_section_asocia.erb
@@ -32,7 +32,7 @@
     </div>
     <div class="row">
       <div class="col-xs-6 col-md-2 col-md-offset-4">
-        <%= link_to 'Hablemos', root_url, class: 'btn btn-primary btn-block' %>
+        <%= link_to 'Hablemos', root_url<<'#contact', class: 'btn btn-primary btn-block' %>
         <!-- TODO enlazar al sitio de contactenos -->
       </div>
       <div class="col-xs-6 col-md-2">
