--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 <body>
 <%= render 'layouts/navbar' %>
 
-<% if "#{request.protocol}#{request.host_with_port}#{request.fullpath}" == root_url %>
+<% ruta = "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>
+<% if ruta == root_url %>
     <%= render 'layouts/carousel' %>
     <%= render 'layouts/section_asocia' %>
     <div style="display: none">
@@ -35,13 +36,13 @@
 <%# Main content %>
 <div class="container-fluid">
   <%= yield %>
-
-  <%# Información para modo desarrollo %>
-  <br/>
-  <br/>
-  <br/>
-  <%= debug(params) if Rails.env.development? %>
 </div>
+
+<% if ruta == about_us_url || ruta == root_url %>
+    <span id="contact"></span>
+    <%= render 'layouts/contact_us' %>
+<% end %>
+
 
 <%= render 'layouts/footer' %>
 </body>
