--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,11 @@
 <%# Main content %>
 <div class="container-fluid">
   <%= yield %>
+  <%# Información para modo desarrollo %>
+  <br/>
+  <br/>
+  <br/>
+  <%= debug(params) if Rails.env.development? %>
 </div>
 
 <% if ruta == about_us_url || ruta == root_url %>
