--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <%# Aquí va el footer del sitio web %>
 <div class="body-footer">
   <div class="container">
-    <div class="row">
+    <div class="row" style="padding-left: 25px;">
       <div class="col-sm-6 col-md-5 col-xs-12">
-        <h5 class="title-footer">Enlaces de interés</h5>
+        <h5 class="title-footer">Enlaces externos</h5>
         <ul>
-          <li>
+          <li class="visible-xs-block">
             <%= link_to 'Universidad de Costa Rica', 'http://www.ucr.ac.cr', class: 'text-footer', target: '_blank' %>
           </li>
           <li>
@@ -45,47 +45,49 @@
         </ul>
       </div>
       <div class="col-md-3 col-xs-12">
-        <h5 class="title-footer">Contáctenos</h5>
-        <div class="social">
-          <div class="row">
-            <div class="col-xs-1">
-              <h4 class="text-center"><%= link_to 'https://www.facebook.com/aecci.ucr/', target: '_blank', class: 'text-footer' do %>
-                    <i class="fa fa-facebook"></i>
-                <% end %></h4>
-            </div>
-            <div class="col-xs-1">
-              <h4 class="text-center"><a href="tel:+50625118027" class="text-footer">
-                <i class="fa fa-phone"></i></a></h4>
-            </div>
-            <div class="col-xs-1">
-              <h4 class="text-center"><%= mail_to 'aecci.ucr@gmail.com', class: 'text-footer' do %>
-                    <i class="fa fa-envelope"></i>
-                <% end %></h4>
-            </div>
-            <div class="col-xs-1">
-              <h4 class="text-center"><%= link_to 'https://goo.gl/maps/sabdDvd4sDm', class: 'text-footer', target: '_blank' do %>
-                    <i class="fa fa-map-marker"></i>
-                <% end %></h4>
-            </div>
-          </div>
+        <div class="row hidden-xs">
+          <%= link_to image_tag('escudo-linea-blanco.png', class: 'img-responsive', style: 'max-width:100px;max-height:auto;margin-top:45px;'), 'http://www.ucr.ac.cr', target: '_blank' %>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-        <small>
-          <hr/>
-          <p class="text-center text-footer">Asociación de Estudiantes de la Escuela de Ciencias de la Computación e
-            Informatica - <%= Time.now.year %></p></small>
+        <hr/>
+        <div class="row">
+          <h4 class="text-center">
+            <%= link_to 'https://www.facebook.com/aecci.ucr/', target: '_blank', class: 'text-footer' do %>
+                <i class="fa fa-facebook"></i>
+            <% end %>
+            &nbsp;
+            <a href="tel:+50625118027" class="text-footer">
+              <i class="fa fa-phone"></i></a>
+            &nbsp;
+            <%= mail_to 'aecci.ucr@gmail.com', class: 'text-footer' do %>
+                <i class="fa fa-envelope"></i>
+            <% end %>
+            &nbsp;
+            <%= link_to 'https://goo.gl/maps/sabdDvd4sDm', class: 'text-footer', target: '_blank' do %>
+                <i class="fa fa-map-marker"></i>
+            <% end %>
+          </h4>
+        </div>
+        <div class="row">
+          <small>
+            <p class="text-center text-footer">Asociación de Estudiantes de la Escuela de Ciencias de la Computación e
+              Informatica - <%= Time.now.year %></p></small>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3 col-xs-12">
         <small>
           <p class="text-center text-footer">Creado bajo
-            licencia <b><%= link_to 'GPLv3', 'http://www.gnu.org/licenses/gpl-3.0.en.html', class: 'text-footer', target: '_blank' %></b></p>
+            licencia
+            <b><%= link_to 'GPLv3', 'http://www.gnu.org/licenses/gpl-3.0.en.html', class: 'text-footer', target: '_blank' %></b>
+          </p>
         </small>
       </div>
     </div>
   </div>
+</div>
 </div>
