--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -83,22 +83,6 @@ $body-bg: $body-color;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-// == Botones de Inicio de sesión y registro ==
-
-@media screen and (max-width: $screen-xs-max) {
-  .btn-login {
-    margin-left: 15px !important;
-  }
-
-  .btn-registro {
-    margin-left: 15px !important;
-  }
-
-  .container-grande {
-    padding: 20px 0;
-  }
-}
-
 .btn-login {
   background-color: transparent;
   padding: 8px 13px;
@@ -269,20 +253,23 @@ label.required:after {
   bottom: 15px;
   left: 15px;
   z-index: 1020;
+  height: 20%; // Esto hace que no abarque toda la pantalla y bloquee lo demás
 }
 
 .alert {
   box-shadow: 1px 1px 5px #2b2b2b;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $screen-xs) {
+  .container-grande {
+    padding: 20px 0;
+  }
+  // === Mensajes de alerta ===
   .flash-messages {
     margin-top: 5px;
-    position: fixed;
     width: 100%;
     left: 0;
     top: 50px;
-    z-index: 1020;
   }
 }
 
@@ -357,7 +344,7 @@ html, body {
 
 // Estilos propios del selectize
 
-.selectize-input.focus{
+.selectize-input.focus {
   border: 2px solid $primary;
   box-shadow: none;
   -webkit-box-shadow: none;
