--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -17,7 +17,7 @@
       <tbody>
       <% @admins.each do |admin| %>
           <tr>
-            <td class="carne"><%= admin.email.split('@').first %></td>
+            <td class="text-capitalize"><%= admin.email.split('@').first %></td>
             <td class="center-cell">
               <% if policy(admin).toggle_admin? %>
                   <%= link_to toggle_admin_path(admin), method: :put, class: 'text-footer' do %>
